
-------------------------------------------------------------------------------

Thu Sep 16 14:16:43 PDT 1999
(Mandrake)

a few kde fixes - now some of the taskbar stuff should work a little better.
still no names of windows / desktops / etc in there, but that'll all get
updated soon enough.

-------------------------------------------------------------------------------

Thu Sep 16 15:14:09 PDT 1999
(Raster)

play sounds for desktoop changing better :)

-------------------------------------------------------------------------------

Thu Sep 16 16:23:20 PDT 1999
(Mandrake)

taskbar now should update when you change focus.  next on to setting and
updating all the names.

-------------------------------------------------------------------------------

Thu Sep 16 16:41:47 PDT 1999
(Raster)

allow iconbox menu to pop up wiht any button presses ont he iconbox border :)

-------------------------------------------------------------------------------

Thu Sep 16 17:10:27 PDT 1999
(Mandrake)

task list updates on new windows and old windows dying off in kpanel now (oops)

-------------------------------------------------------------------------------

Thu Sep 16 18:36:16 PDT 1999
(Mandrake)

closer to having the client titles show up in the taskbar.  at least the
desktops show up in the pager now.  (more kde work)

-------------------------------------------------------------------------------

Thu Sep 16 18:47:31 PDT 1999
(Mandrake)

well, it would HELP if I used XA_STRING on those :)
MOST of the taskbar works now.
still have to do updates of title setting KWM_WIN_TITLE.


-------------------------------------------------------------------------------

Thu Sep 16 18:59:43 PDT 1999
(Mandrake)

IMPORTANT TODO ITEM:   kde support and desktops other than 0 cause things to 
segfault.
Needs fixing.  BIG bug.  if you turn "kde off" in your eesh it will fix that,
or if you want kde support only use desktop 0 for now.  'nuff said.
